# ai-experiments

./: LICENSE  README.md  pyproject.toml
experiments/: README.md  __init__.py  activation.py  encoding.py  linear.py  normalize.py  weight.py
experiments/config/: __init__.py  model.py  settings.py
experiments/glu/: README.md  __init__.py  model.py
experiments/lcm/: README.md  __init__.py  base-lcm.py  base.py  encoding.py  padding.py  prenet.py
experiments/lcm/config/: __init__.py  settings.py
experiments/lcm/linear/: README.md  __init__.py  base.py  ffn.py  projection.py
experiments/lcm/sonar/: __init__.py  normalizer.py
experiments/lcm/transformer/: __init__.py  decoder.py
experiments/lcm/usage/: config.yaml  main.py
experiments/linear/: __init__.py  ffn.py  projection.py
experiments/lnn/: README.md  ncp.py
experiments/sonar/: __init__.py  normalizer.py
experiments/transformer/: __init__.py  decoder.py
